updated the header and footer in some html files

--- a/index-4.html
+++ b/index-4.html
@@ -100,7 +100,7 @@
             <div class="container">
                 <div class="main-header__inner">
                     <div class="main-header__logo">
-                        <a href="index-2.html">
+                        <a href="index-4.html">
                             <img src="assets/images/logo-dark-2.png" alt="Trevlo HTML" width="187">
                         </a>
                     </div><!-- /.main-header__logo -->
@@ -109,175 +109,8 @@
                             <ul class="main-menu__list">
 
 
-                                <li class="megamenu megamenu-clickable megamenu-clickable--toggler">
-                                    <a href="index-2.html">Demos</a>
-                                    <ul>
-                                        <li>
-                                            <div class="megamenu-popup">
-                                                <a href="#" class="megamenu-clickable--close"><span class="icon-close"></span></a>
-                                                <!-- /.megamenu-clickable--close -->
-                                                <div class="megamenu-popup__content">
-                                                    <div class="demo-one">
-                                                        <div class="container">
-                                                            <div class="row">
-                                                                <div class="col-md-6 col-lg-4">
-                                                                    <div class="demo-one__card">
-                                                                        <div class="demo-one__image">
-                                                                            <img src="assets/images/landing/home-4.jpg" alt="">
-                                                                            <div class="demo-one__btns">
-                                                                                <a href="index-4.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>Multi Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                                <a href="index-4-one-page.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>One Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                            </div><!-- /.demo-one__btns -->
-                                                                        </div><!-- /.demo-one__image -->
-                                                                        <div class="demo-one__content">
-                                                                            <h3 class="demo-one__title">
-                                                                                <a href="index-4.html">Home Page 04</a>
-                                                                            </h3><!-- /.demo-one__title -->
-                                                                        </div><!-- /.demo-one__content -->
-                                                                    </div><!-- /.demo-one__card -->
-                                                                </div><!-- /.col-md-6 col-lg-3 -->
-                                                                <div class="col-md-6 col-lg-4">
-                                                                    <div class="demo-one__card">
-                                                                        <div class="demo-one__image">
-                                                                            <img src="assets/images/landing/home-5.jpg" alt="">
-                                                                            <div class="demo-one__btns">
-                                                                                <a href="index-5.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>Multi Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                                <a href="index-5-one-page.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>One Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                            </div><!-- /.demo-one__btns -->
-                                                                        </div><!-- /.demo-one__image -->
-                                                                        <div class="demo-one__content">
-                                                                            <h3 class="demo-one__title">
-                                                                                <a href="index-5.html">Home Page 05</a>
-                                                                            </h3><!-- /.demo-one__title -->
-                                                                        </div><!-- /.demo-one__content -->
-                                                                    </div><!-- /.demo-one__card -->
-                                                                </div><!-- /.col-md-6 col-lg-3 -->
-                                                                <div class="col-md-6 col-lg-4">
-                                                                    <div class="demo-one__card">
-                                                                        <div class="demo-one__image">
-                                                                            <img src="assets/images/landing/home-1.jpg" alt="">
-                                                                            <div class="demo-one__btns">
-                                                                                <a href="index-2.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>Multi Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                                <a href="index-one-page.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>One Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                            </div><!-- /.demo-one__btns -->
-                                                                        </div><!-- /.demo-one__image -->
-                                                                        <div class="demo-one__content">
-                                                                            <h3 class="demo-one__title">
-                                                                                <a href="index-2.html">Home Page 01</a>
-                                                                            </h3><!-- /.demo-one__title -->
-                                                                        </div><!-- /.demo-one__content -->
-                                                                    </div><!-- /.demo-one__card -->
-                                                                </div><!-- /.col-md-6 col-lg-3 -->
-                                                                <div class="col-md-6 col-lg-4">
-                                                                    <div class="demo-one__card">
-                                                                        <div class="demo-one__image">
-                                                                            <img src="assets/images/landing/home-2.jpg" alt="">
-                                                                            <div class="demo-one__btns">
-                                                                                <a href="index-3.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>Multi Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                                <a href="index-2-one-page.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>One Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                            </div><!-- /.demo-one__btns -->
-                                                                        </div><!-- /.demo-one__image -->
-                                                                        <div class="demo-one__content">
-                                                                            <h3 class="demo-one__title">
-                                                                                <a href="index-3.html">Home Page 02</a>
-                                                                            </h3><!-- /.demo-one__title -->
-                                                                        </div><!-- /.demo-one__content -->
-                                                                    </div><!-- /.demo-one__card -->
-                                                                </div><!-- /.col-md-6 col-lg-3 -->
-                                                                <div class="col-md-6 col-lg-4">
-                                                                    <div class="demo-one__card">
-                                                                        <div class="demo-one__image">
-                                                                            <img src="assets/images/landing/home-3.jpg" alt="">
-                                                                            <div class="demo-one__btns">
-                                                                                <a href="index-6.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>Multi Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                                <a href="index-3-one-page.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>One Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                            </div><!-- /.demo-one__btns -->
-                                                                        </div><!-- /.demo-one__image -->
-                                                                        <div class="demo-one__content">
-                                                                            <h3 class="demo-one__title">
-                                                                                <a href="index-6.html">Home Page 03</a>
-                                                                            </h3><!-- /.demo-one__title -->
-                                                                        </div><!-- /.demo-one__content -->
-                                                                    </div><!-- /.demo-one__card -->
-                                                                </div><!-- /.col-md-6 col-lg-3 -->
-                                                                <div class="col-md-6 col-lg-4">
-                                                                    <div class="demo-one__card">
-                                                                        <div class="demo-one__image">
-                                                                            <img src="assets/images/landing/home-dark.jpg" alt="">
-                                                                            <div class="demo-one__btns">
-                                                                                <a href="index-dark.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>View Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                            </div><!-- /.demo-one__btns -->
-                                                                        </div><!-- /.demo-one__image -->
-                                                                        <div class="demo-one__content">
-                                                                            <h3 class="demo-one__title">
-                                                                                <a href="index-dark.html">Home Dark</a>
-                                                                            </h3><!-- /.demo-one__title -->
-                                                                        </div><!-- /.demo-one__content -->
-                                                                    </div><!-- /.demo-one__card -->
-                                                                </div><!-- /.col-md-6 col-lg-3 -->
-                                                                <div class="col-md-6 col-lg-4">
-                                                                    <div class="demo-one__card">
-                                                                        <div class="demo-one__image">
-                                                                            <img src="assets/images/landing/home-boxed.jpg" alt="">
-                                                                            <div class="demo-one__btns">
-                                                                                <a href="index-boxed.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>View Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                            </div><!-- /.demo-one__btns -->
-                                                                        </div><!-- /.demo-one__image -->
-                                                                        <div class="demo-one__content">
-                                                                            <h3 class="demo-one__title">
-                                                                                <a href="index-boxed.html">Home Boxed</a>
-                                                                            </h3><!-- /.demo-one__title -->
-                                                                        </div><!-- /.demo-one__content -->
-                                                                    </div><!-- /.demo-one__card -->
-                                                                </div><!-- /.col-md-6 col-lg-3 -->
-                                                                <div class="col-md-6 col-lg-4">
-                                                                    <div class="demo-one__card">
-                                                                        <div class="demo-one__image">
-                                                                            <img src="assets/images/landing/home-rtl.jpg" alt="">
-                                                                            <div class="demo-one__btns">
-                                                                                <a href="index-rtl.html" class="trevlo-btn demo-one__btn">
-                                                                                    <span>View Page</span>
-                                                                                </a><!-- /.thm-btn demo-one__btn -->
-                                                                            </div><!-- /.demo-one__btns -->
-                                                                        </div><!-- /.demo-one__image -->
-                                                                        <div class="demo-one__content">
-                                                                            <h3 class="demo-one__title">
-                                                                                <a href="index-rtl.html">Home RTL</a>
-                                                                            </h3><!-- /.demo-one__title -->
-                                                                        </div><!-- /.demo-one__content -->
-                                                                    </div><!-- /.demo-one__card -->
-                                                                </div><!-- /.col-md-6 col-lg-3 -->
-                                                            </div><!-- /.row -->
-                                                        </div><!-- /.container -->
-                                                    </div><!-- /.demos-one -->
-                                                </div><!-- /.megamenu-popup__content -->
-                                            </div><!-- /.megamenu-popup -->
-                                        </li>
-                                    </ul>
+                                <li>
+                                    <a href="index-4.html">Home</a>
                                 </li>
 
                                 <li>
@@ -1498,7 +1331,7 @@
                 <div class="container">
                     <div class="row gutter-y-30 align-items-center">
                         <div class="col-lg-3 col-md-6">
-                            <a href="index-2.html" class="footer-two__bottom-logo">
+                            <a href="index-4.html" class="footer-two__bottom-logo">
                                 <img src="assets/images/logo-light-3.png" alt="logo" width="187">
                             </a><!-- /.footer-two__bottom-logo -->
                         </div><!-- /.col-lg-3 col-md-6 -->
@@ -1541,7 +1374,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index-2.html" aria-label="logo image"><img src="assets/images/logo-light-3.png" width="187" alt="" /></a>
+                <a href="index-4.html" aria-label="logo image"><img src="assets/images/logo-light-3.png" width="187" alt="" /></a>
             </div>
             <!-- /.logo-box -->
             <div class="mobile-nav__container"></div>
