--- a/gallery.html
+++ b/gallery.html
@@ -6,11 +6,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallery || Trevlo || HTML Template For Tours & Travel</title>
+    <title>Gallery || Tour Connect</title>
     <!-- favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/tour-connect-fav.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/tour-connect-fav.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/tour-connect-fav.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
     <meta name="description" content="Trevlo is a modern HTML Template for Beauty, Spa Centers, Hair, Nail, Spa Salons & Cosmetic shops. The template perfectly fits Beauty Spa, Salon, and Wellness Treatments websites and businesses." />
 
@@ -18,10 +18,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com/">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,700&amp;display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&amp;display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,400;0,700;0,800;1,800&amp;display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Manrope&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&amp;display=swap" rel="stylesheet">
@@ -37,12 +33,14 @@
     <link rel="stylesheet" href="assets/vendors/nouislider/nouislider.pips.css" />
     <link rel="stylesheet" href="assets/vendors/tiny-slider/tiny-slider.css" />
     <link rel="stylesheet" href="assets/vendors/trevlo-icons/style.css" />
+    <link rel="stylesheet" href="assets/vendors/trevlo-one-icons/style.css" />
     <link rel="stylesheet" href="assets/vendors/daterangepicker-master/daterangepicker.css" />
     <link rel="stylesheet" href="assets/vendors/owl-carousel/css/owl.carousel.min.css" />
     <link rel="stylesheet" href="assets/vendors/owl-carousel/css/owl.theme.default.min.css" />
 
     <!-- template styles -->
     <link rel="stylesheet" href="assets/css/trevlo.css" />
+    <link rel="stylesheet" href="assets/css/color-1.css" />
 </head>
 
 <body class="custom-cursor">
@@ -63,15 +61,15 @@
                             <ul class="topbar-two__info list-unstyled">
                                 <li class="topbar-two__info-item">
                                     <span class="topbar-two__info-icon trevlo-one-icon-telephone"></span>
-                                    <a href="tel:+1234567890" class="topbar-two__info-text">+123 456 7890</a>
+                                    <a href="tel:+233244647443" class="topbar-two__info-text">+233 244 647 443</a>
                                 </li>
                                 <li class="topbar-two__info-item">
                                     <span class="topbar-two__info-icon icon-envelope"></span>
-                                    <a href="mailto:needhelp@company.com" class="topbar-two__info-text">needhelp@company.com</a>
+                                    <a href="mailto:support@tourconnectghana.com" class="topbar-two__info-text">support@tourconnectghana.com</a>
                                 </li>
                                 <li class="topbar-two__info-item">
                                     <span class="topbar-two__info-icon icon-location-1"></span>
-                                    <span class="topbar-two__info-text">6391 Elgin St. Celina, Delaware New York. USA</span>
+                                    <span class="topbar-two__info-text">Accra, Ghana</span>
                                 </li>
                             </ul><!-- /.topbar-two__info -->
                         </div><!-- /.topbar-two__left -->
@@ -103,7 +101,7 @@
                 <div class="main-header__inner">
                     <div class="main-header__logo">
                         <a href="index-4.html">
-                            <img src="assets/images/logo-dark-2.png" alt="Trevlo HTML" width="187">
+                            <img src="assets/images/tour-connect-logo.png" alt="Trevlo HTML" width="187">
                         </a>
                     </div><!-- /.main-header__logo -->
                     <div class="main-header__right">
@@ -111,7 +109,7 @@
                             <ul class="main-menu__list">
 
 
-                                <li class="megamenu megamenu-clickable megamenu-clickable--toggler">
+                                <li>
                                     <a href="index-4.html">Home</a>
                                 </li>
 
@@ -262,7 +260,7 @@
                             </div>
                             <div class="main-header__phone-text">
                                 <p class="main-header__phone-title">Call Anytime</p>
-                                <h4 class="main-header__phone-number"><a href="tel:+88012365499">+88 0123 654 99</a></h4>
+                                <h4 class="main-header__phone-number"><a href="tel:+233244647443">+233 244 647 443</a></h4>
                             </div>
                         </div><!-- /.main-header__phone -->
                     </div><!-- /.main-header__right -->
@@ -416,10 +414,9 @@
                             <div class="footer-widget footer-widget--contact">
                                 <h2 class="footer-widget__title">Contact</h2><!-- /.footer-widget__title -->
                                 <ul class="footer-widget__info">
-                                    <li> <i class="trevlo-one-icon-maps-and-flags"></i> <span>6391 Elgin St. Celina, Delaware
-                                            New York. USA</span></li>
-                                    <li> <i class="icon-envelope"></i> <a href="mailto:michael.mitc@example.com">michael.mitc@example.com</a></li>
-                                    <li> <i class="trevlo-one-icon-telephone"></i> <a href="tel:+1234567890">+123 456 7890</a>
+                                    <li> <i class="trevlo-one-icon-maps-and-flags"></i> <span>Accra, Ghana</span></li>
+                                    <li> <i class="icon-envelope"></i> <a href="mailto:support@tourconnectghana.com">support@tourconnectghana.com</a></li>
+                                    <li> <i class="trevlo-one-icon-telephone"></i> <a href="tel:+233244647443">+233 244 647 443</a>
                                     </li>
                                 </ul><!-- /.footer-widget__info -->
                             </div><!-- /.footer-widget -->
@@ -467,7 +464,7 @@
                     <div class="row gutter-y-30 align-items-center">
                         <div class="col-lg-3 col-md-6">
                             <a href="index-4.html" class="footer-two__bottom-logo">
-                                <img src="assets/images/logo-light-3.png" alt="logo" width="187">
+                                <img src="assets/images/tour-connect-logo.png" alt="logo" width="187">
                             </a><!-- /.footer-two__bottom-logo -->
                         </div><!-- /.col-lg-3 col-md-6 -->
                         <div class="col-lg-6 col-md-6">
@@ -509,7 +506,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index-4.html" aria-label="logo image"><img src="assets/images/logo-light-3.png" width="187" alt="" /></a>
+                <a href="index-4.html" aria-label="logo image"><img src="assets/images/tour-connect-logo.png" width="187" alt="" /></a>
             </div>
             <!-- /.logo-box -->
             <div class="mobile-nav__container"></div>
@@ -518,11 +515,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@trevlo.com">needhelp@trevlo.com</a>
+                    <a href="mailto:support@tourconnectghana.com">support@tourconnectghana.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:(303)5550105">(303) 555-0105</a>
+                    <a href="tel:+233244647443">+233 244 647 443</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
