--- a/index-4.html
+++ b/index-4.html
@@ -6,11 +6,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Four || Trevlo || HTML Template For Tours & Travel</title>
+    <title>Tour Connect</title>
     <!-- favicons Icons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/tour-connect-fav.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/tour-connect-fav.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/tour-connect-fav.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
     <meta name="description" content="Trevlo is a modern HTML Template for Beauty, Spa Centers, Hair, Nail, Spa Salons & Cosmetic shops. The template perfectly fits Beauty Spa, Salon, and Wellness Treatments websites and businesses." />
 
@@ -61,15 +61,15 @@
                             <ul class="topbar-two__info list-unstyled">
                                 <li class="topbar-two__info-item">
                                     <span class="topbar-two__info-icon trevlo-one-icon-telephone"></span>
-                                    <a href="tel:+1234567890" class="topbar-two__info-text">+123 456 7890</a>
+                                    <a href="tel:+233244647443" class="topbar-two__info-text">+233 244 647 443</a>
                                 </li>
                                 <li class="topbar-two__info-item">
                                     <span class="topbar-two__info-icon icon-envelope"></span>
-                                    <a href="mailto:needhelp@company.com" class="topbar-two__info-text">needhelp@company.com</a>
+                                    <a href="mailto:support@tourconnectghana.com" class="topbar-two__info-text">support@tourconnectghana.com</a>
                                 </li>
                                 <li class="topbar-two__info-item">
                                     <span class="topbar-two__info-icon icon-location-1"></span>
-                                    <span class="topbar-two__info-text">6391 Elgin St. Celina, Delaware New York. USA</span>
+                                    <span class="topbar-two__info-text">Accra, Ghana</span>
                                 </li>
                             </ul><!-- /.topbar-two__info -->
                         </div><!-- /.topbar-two__left -->
@@ -101,7 +101,7 @@
                 <div class="main-header__inner">
                     <div class="main-header__logo">
                         <a href="index-4.html">
-                            <img src="assets/images/logo-dark-2.png" alt="Trevlo HTML" width="187">
+                            <img src="assets/images/tour-connect-logo.png" alt="Trevlo HTML" width="187">
                         </a>
                     </div><!-- /.main-header__logo -->
                     <div class="main-header__right">
@@ -260,7 +260,7 @@
                             </div>
                             <div class="main-header__phone-text">
                                 <p class="main-header__phone-title">Call Anytime</p>
-                                <h4 class="main-header__phone-number"><a href="tel:+88012365499">+88 0123 654 99</a></h4>
+                                <h4 class="main-header__phone-number"><a href="tel:+233244647443">+233 244 647 443</a></h4>
                             </div>
                         </div><!-- /.main-header__phone -->
                     </div><!-- /.main-header__right -->
@@ -603,7 +603,7 @@
                                     </div>
                                     <div class="about-five__phone__text">
                                         <p class="about-five__phone__title">Call Us Now</p>
-                                        <h4 class="about-five__phone__number"><a href="tel:+208-555-0112">+208-555-0112</a></h4>
+                                        <h4 class="about-five__phone__number"><a href="tel:+233244647443">+233 244 647 443</a></h4>
                                     </div>
                                 </div><!-- /.about-five__phone -->
                             </div><!-- /.about-five__bottom -->
@@ -1281,10 +1281,9 @@
                             <div class="footer-widget footer-widget--contact">
                                 <h2 class="footer-widget__title">Contact</h2><!-- /.footer-widget__title -->
                                 <ul class="footer-widget__info">
-                                    <li> <i class="trevlo-one-icon-maps-and-flags"></i> <span>6391 Elgin St. Celina, Delaware
-                                            New York. USA</span></li>
-                                    <li> <i class="icon-envelope"></i> <a href="mailto:michael.mitc@example.com">michael.mitc@example.com</a></li>
-                                    <li> <i class="trevlo-one-icon-telephone"></i> <a href="tel:+1234567890">+123 456 7890</a>
+                                    <li> <i class="trevlo-one-icon-maps-and-flags"></i> <span>Accra, Ghana</span></li>
+                                    <li> <i class="icon-envelope"></i> <a href="mailto:support@tourconnectghana.com">support@tourconnectghana.com</a></li>
+                                    <li> <i class="trevlo-one-icon-telephone"></i> <a href="tel:+233244647443">+233 244 647 443</a>
                                     </li>
                                 </ul><!-- /.footer-widget__info -->
                             </div><!-- /.footer-widget -->
@@ -1332,7 +1331,7 @@
                     <div class="row gutter-y-30 align-items-center">
                         <div class="col-lg-3 col-md-6">
                             <a href="index-4.html" class="footer-two__bottom-logo">
-                                <img src="assets/images/logo-light-3.png" alt="logo" width="187">
+                                <img src="assets/images/tour-connect-logo.png" alt="logo" width="187">
                             </a><!-- /.footer-two__bottom-logo -->
                         </div><!-- /.col-lg-3 col-md-6 -->
                         <div class="col-lg-6 col-md-6">
@@ -1374,7 +1373,7 @@
             <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
             <div class="logo-box">
-                <a href="index-4.html" aria-label="logo image"><img src="assets/images/logo-light-3.png" width="187" alt="" /></a>
+                <a href="index-4.html" aria-label="logo image"><img src="assets/images/tour-connect-logo.png" width="187" alt="" /></a>
             </div>
             <!-- /.logo-box -->
             <div class="mobile-nav__container"></div>
@@ -1383,11 +1382,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@trevlo.com">needhelp@trevlo.com</a>
+                    <a href="mailto:support@tourconnectghana.com">support@tourconnectghana.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:(303)5550105">(303) 555-0105</a>
+                    <a href="tel:+233244647443">+233 244 647 443</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
